# nervous-repository-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aqua-checksums.json  aqua-migration-HANDOFF.md  aqua-migration-plan.md  aqua.yaml  commit-check.toml  create-labels.sh  mise.toml  renovate.json5  todo.md
.claude/: CLAUDE.md
.claude/rules/: dev-rules.md  tooling.md
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aqua-update-checksum.yml  aqua-validate.yml  pr-validation.yml  release-drafter.yml  security-audit.yml
docs/: adoption-guide.md  design.md
docs/adoption/: actions-sha-pin.md  aqua-checksum-pin.md  conventional-commits.md  dependency-audit.md  docker-hardening.md  foundation.md  hook-rev-pin.md  pr-title.md  release-drafter.md  renovate.md  repo-scaffolding.md  secret-scan.md  vocab-self-test.md  workflow-lint.md
examples/docker-node/: .npmrc  Dockerfile  README.md  package.json  pnpm-workspace.yaml  server.ts  tsconfig.json
examples/docker-rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml
examples/docker-rust/src/: main.rs
examples/node-app/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: check-docker-digests.sh  check-hook-rev-sha.sh  check-mise-locked.sh  check-pnpm-aqua-sync.sh  check-vocab-sync.sh  test-check-pnpm-aqua-sync.sh
